--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "typescript-language-server": "^4.3.4"
   },
   "scripts": {
-    "format": "prettier -w 'package.json' 'www/*.html' 'src/**/*.ts'",
+    "format": "prettier -w 'package.json' 'www/style/writing.css' 'www/*.html' 'src/**/*.ts'",
     "serve": "esbuild src/main.ts --bundle --format=esm --outfile=www/main.js --servedir=www"
   }
 }
