--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   },
   "scripts": {
     "format": "prettier -w 'package.json' 'www/style/writing.css' 'www/*.html' 'src/**/*.ts'",
-    "serve": "esbuild src/main.ts --bundle --format=esm --outfile=www/main.js --servedir=www"
+    "serve": "esbuild src/main.ts --bundle --format=esm --outfile=www/main.js --servedir=www",
+    "check": "tsc -p tsconfig.json"
+  },
+  "dependencies": {
+    "preact": "^10.26.8"
   }
 }
